# BlueGuardian

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  QUICKSTART.md  README.md  docker-compose.simple.yml  docker-compose.yml  pyproject.toml  requirements.txt
data/prompts/: README.md
data/signatures/: README.md
data/yara_rules/: README.md
docs/: README.md
examples/: custom_plugin_example.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useAnalysis.ts
frontend/src/pages/: AnalysisPage.tsx  Dashboard.tsx  JobDetailsPage.tsx  JobsPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
reports/: README.md
src/agents/: base_agent.py  document_agent.py  malware_agent.py  memory_agent.py  network_agent.py  phishing_agent.py  siem_log_agent.py
src/ai_providers/: base.py  claude_provider.py  consensus.py  openai_provider.py
src/analyzers/: email_analyzer.py  javascript_deobfuscator.py  lnk_analyzer.py  memory_analyzer.py  network_analyzer.py  office_analyzer.py  pdf_analyzer.py  pe_analyzer.py
src/config/: settings.py
src/core/: hallucination_guard.py  orchestrator.py
src/integrations/: alienvault_otx.py  hybrid_analysis.py  mitre_attack.py  siem_integration.py  virustotal.py
src/interfaces/: api_server.py  cli_batch.py  cli_interactive.py
src/plugins/: plugin_manager.py
src/prompts/: document_prompts.py  forensics_prompts.py  malware_prompts.py  network_prompts.py  phishing_prompts.py  siem_prompts.py
src/utils/: docker_sandbox.py  report_generator.py  tool_installer.py
storage/artifacts/: README.md
storage/reports/: README.md
tests/test_agents/: README.md
tests/test_analyzers/: README.md
tests/test_integration/: README.md
