[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blueguardian-ai"
version = "0.1.0"
description = "Advanced Blue Team AI Security Analysis Framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "BlueGuardian AI Team"}
]
keywords = ["security", "malware-analysis", "threat-intelligence", "blue-team", "ai", "forensics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "typer>=0.9",
    "loguru>=0.7",
    "anthropic>=0.18",
    "openai>=1.12",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "black>=23.12",
    "ruff>=0.1",
    "mypy>=1.8",
]

malware = [
    "pefile>=2023.2",
    "pyelftools>=0.30",
    "yara-python>=4.3",
    "capstone>=5.0",
]

forensics = [
    "volatility3>=2.5",
]

all = [
    "blueguardian-ai[dev,malware,forensics]",
]

[project.scripts]
blueguardian = "src.interfaces.cli_interactive:main"
bgai = "src.interfaces.cli_interactive:main"

[project.urls]
Homepage = "https://github.com/blueguardian-ai/blueguardian-ai"
Documentation = "https://blueguardian-ai.readthedocs.io"
Repository = "https://github.com/blueguardian-ai/blueguardian-ai"
Issues = "https://github.com/blueguardian-ai/blueguardian-ai/issues"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "DTZ", "T10", "ISC", "ICN", "G", "PIE", "T20", "PT", "Q", "RET", "SIM", "TID", "ARG", "PLE", "PLR", "PLW", "RUF"]
ignore = ["ANN101", "ANN102", "S101", "PLR0913"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "ANN"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
